--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css/style.css">
-  <title>G3 Architects</title>
-</head>
-<body>
-  <header>
-    <nav>
-      <h3>G3 Architects</h3>
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Contact Us</a></li>
-        <li><a href="">Login</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-
-  </main>
-  <footer>
-
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css/style.css" />
+    <title>G3 Architects</title>
+  </head>
+  <body>
+    <header>
+      <nav class="nav_tittle">
+        <h3>G3 Architects</h3>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact Us</a></li>
+          <li><a href="">Login</a></li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner_content">
+          <h1 class="banner_tittle">Brand New roup of Architects</h1>
+          <p class="banner_description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn_primary">Explore More</button>
+        </div>
+        <img src="images/banner.png" alt="" srcset="">
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
