--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>G3 Architects</title>
   </head>
   <body>
+    <!-- Header Start -->
     <header>
       <nav class="nav_tittle">
         <h3>G3 Architects</h3>
@@ -30,7 +31,25 @@
         <img src="images/banner.png" alt="" srcset="">
       </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <!-- Header End -->
+    <main>
+      <!-- Teams Section Start -->
+      <section class="teams_container">
+        <div class="teams_img_container">
+          <img src="images/team1.png" alt="">
+          <img src="images/team2.png" alt="">
+          <img src="images/team3.png" alt="">
+          <img src="images/team4.png" alt="">
+        </div>
+        <div class="teams_content">
+          <h3 class="team_tittle" ><span class="quick_test">Quick list</span> <span class="of_our">of Our</span> <span class="feture">Features</span></h3>
+          <p class="teams_description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+          <button class="btn_primary">Explore More</button>
+        </div>
+      </section>
+    </main>
+    <footer>
+
+    </footer>
   </body>
 </html>
