--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="banner">
         <div class="banner_content">
           <h1 class="banner_tittle">Brand New roup of Architects</h1>
-          <p class="banner_description">
+          <p class="text_light_gray">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
             humour, or randomised words which don't look even
@@ -43,7 +43,7 @@
         </div>
         <div class="teams_content">
           <h3 class="team_tittle" ><span class="quick_test">Quick list</span> <span class="of_our">of Our</span> <span class="feture">Features</span></h3>
-          <p class="teams_description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+          <p class="text_light_gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
           <button class="btn_primary">Explore More</button>
         </div>
       </section>
