--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Header Start -->
     <header>
-      <nav class="nav_tittle">
+      <nav class="section_tittle">
         <h3>G3 Architects</h3>
         <ul>
           <li><a href="">Home</a></li>
@@ -46,6 +46,14 @@
           <p class="text_light_gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
           <button class="btn_primary">Explore More</button>
         </div>
+      </section>
+      <!-- Feature section start -->
+      <section class="feture">
+        
+      </section>
+      <section class="facts">
+        <h3 class="section_tittle">Some Facts</h3>
+        <p class="text_light_gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
       </section>
     </main>
     <footer>
