--- a/index.html
+++ b/index.html
@@ -54,6 +54,39 @@
       <section class="facts">
         <h3 class="section_tittle">Some Facts</h3>
         <p class="text_light_gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div class="fact_card_container">
+          <div class="card">
+            <img src="images/icons/ribon.png" alt="">
+            <h2 class="card_stats">54</h2>
+            <p class="card_title">Awards Winnings</p>
+          </div>
+          <div class="card">
+            <img src="images/icons/projects.png" alt="">
+            <h2 class="card_stats">1458</h2>
+            <p class="card_title">Project Finished</p>
+          </div>
+          <div class="card">
+            <img src="images/icons/customers.png" alt="">
+            <h2 class="card_stats">590</h2>
+            <p class="card_title">Clients Worked</p>
+          </div>
+          <div class="card">
+            <img src="images/icons/email.png" alt="">
+            <h2 class="card_stats">22578</h2>
+            <p class="card_title">Email Send</p>
+          </div>
+        </div>
+      </section>
+      <section class="sponser">
+        <h3 class="section_tittle">Our Sponspors</h3>
+        <p class="text_light_gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div class="sponser_img_container">
+          <img src="images/sponsors/spotify.png" alt="">
+          <img src="images/sponsors/amazon.png" alt="">
+          <img src="images/sponsors/google.png" alt="">
+          <img src="images/sponsors/telerama.png" alt="">
+          <img src="images/sponsors/figma.png" alt="">
+        </div>
       </section>
     </main>
     <footer>
