--- a/index.html
+++ b/index.html
@@ -48,8 +48,30 @@
         </div>
       </section>
       <!-- Feature section start -->
-      <section class="feture">
-        
+      <section class="features">
+        <div class="feature_content">
+          <h3 class="section_tittle">Features you will <br> love & enjoy</h3>
+            <p class="text_light_gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <div class="card">
+              <h4>Dexktop & Mobile Version</h4>
+              <p class="text_light_gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="card">
+              <h4>Dexktop & Mobile Version</h4>
+              <p class="text_light_gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="card">
+              <h4>Dexktop & Mobile Version</h4>
+              <p class="text_light_gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="card">
+              <h4>Dexktop & Mobile Version</h4>
+              <p class="text_light_gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+        </div>
+        <div class="fiture_img">
+          <img src="images/architect.png" alt="">
+        </div>
       </section>
       <section class="facts">
         <h3 class="section_tittle">Some Facts</h3>
