--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css/style.css" />
+    <link rel="icon" type="image/x-icon" href="images/icons/fav.png">
     <title>G3 Architects</title>
   </head>
   <body>
